test/fixtures/config/theming/error/failToRun/.gulp.js
module.exports = {
  msgs: {
    info: null,  // To cause failToRun error forcefully
    error: {
      failToRun: 'FAIL TO RUN',
    },
  },
};
